# germanize-bot

./: .env.sample  .gitignore  Procfile  README.md  fly.toml  pyproject.toml
src/germanize/: __init__.py  bot.py  constants.py  server.py  spell_it.py
